# birthday-emailer

./: .gitignore  database.sqlite  pyproject.toml  requirements.txt
app/: database.py  environment.py  main.py  models.py  router.py  tasks.py
app/templates/: add.html  edit.html  index.html
data/: birthdays.csv
